Finish header navbar

--- a/index.html
+++ b/index.html
@@ -10,9 +10,38 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+
     <title>Microverse Capstone - HTML & CSS</title>
   </head>
   <body>
+    <!-- Header -->
+    <header>
+        <nav class="nav">
+            <div class="nav-1">
+                <i class="bi bi-box-seam fs-1 mx-5 color-red"></i>
+                <h3 class="text-light">FICTIONAL</h3>
+            </div>
+            <div class="d-flex nav-2">
+                <div >
+                    <i class="bi bi-house-door-fill text-secondary"></i>
+                    <a href="#" class="text-secondary text-decoration-none">Home</a>
+                </div>
+                <div>
+                    <i class="bi bi-grid-fill text-secondary"></i>
+                    <a href="#" class="text-secondary text-decoration-none">Collection</a>
+                </div>
+                <div>
+                    <i class="bi bi-cart-fill text-secondary"></i>
+                    <a href="#" class="text-secondary text-decoration-none">Purchase List</a>
+                </div>
+                <div>
+                    <a href="#" class="fs-6 text-secondary text-decoration-none badge bg-red text-light rounded-1 me-5">POST AN AD</a>
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
