--- a/index.html
+++ b/index.html
@@ -20,28 +20,107 @@
     <header>
         <nav class="nav">
             <div class="nav-1">
-                <i class="bi bi-box-seam fs-1 mx-5 color-red"></i>
-                <h3 class="text-light">FICTIONAL</h3>
+                <i class="bi bi-box-seam color-red"></i>
+                <h2 class="text-light">FICTIONAL</h2>
             </div>
-            <div class="d-flex nav-2">
+            <div class="nav-2">
                 <div >
-                    <i class="bi bi-house-door-fill text-secondary"></i>
-                    <a href="#" class="text-secondary text-decoration-none">Home</a>
+                    <i class="bi bi-house-door-fill color-grey"></i>
+                    <a href="#" class="color-grey text-decoration-none">Home</a>
                 </div>
                 <div>
-                    <i class="bi bi-grid-fill text-secondary"></i>
-                    <a href="#" class="text-secondary text-decoration-none">Collection</a>
+                    <i class="bi bi-grid-fill color-grey"></i>
+                    <a href="#" class="color-grey text-decoration-none">Collection</a>
                 </div>
                 <div>
-                    <i class="bi bi-cart-fill text-secondary"></i>
-                    <a href="#" class="text-secondary text-decoration-none">Purchase List</a>
+                    <i class="bi bi-cart-fill color-grey"></i>
+                    <a href="#" class="color-grey text-decoration-none">Purchase List</a>
                 </div>
-                <div>
-                    <a href="#" class="fs-6 text-secondary text-decoration-none badge bg-red text-light rounded-1 me-5">POST AN AD</a>
-                </div>
+            </div>
+            <div class="nav-3 d-none">
+                <a href="#" class="fs-6 color-grey text-decoration-none badge bg-red text-light rounded-1">POST AN AD</a>
             </div>
         </nav>
+        <!-- Ipad/Desktop searchbar -->
+        <div class="bg-danger d-none d-md-grid">
+            <h1 class="text-light">FICTIONAL</h1>
+            <p>Buying And Selling Couldn't Be Simpler Than This</p>
+        </div>
     </header>
+    <main class="bg-light-grey">
+        <!-- Ipad/Desktop HOT ADS -->
+        <!-- Normal Ads (mobile and dekstop) -->
+        <div>
+            <div class="bg-light d-flex justify-content-start align-items-center border-bottom border-2 mb-3">
+                <i class="bi bi-controller color-black fs-2 ms-3"></i>
+                <h3 class="fs-4 m-0 mx-2">Games</h3>
+                <p class="m-0 ad-sub">(All genre. Platform: Computer)</p>
+            </div>
+            <i class="bi bi-caret-left d-none d-md-grid"></i>
+                <div class="bg-light-grey row g-3 mx-3">
+                    <div class="bg-light col-6 border border-1">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        </div>
+                    </div>
+                </div>
+            <i class="bi bi-caret-right d-none d-md-grid"></i>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
