Change ads text and image and created second ads list

--- a/index.html
+++ b/index.html
@@ -52,74 +52,232 @@
         <!-- Normal Ads (mobile and dekstop) -->
         <div>
             <div class="bg-light d-flex justify-content-start align-items-center border-bottom border-2 mb-3">
-                <i class="bi bi-controller color-black fs-2 ms-3"></i>
+                <i class="bi bi-cpu color-black fs-2 ms-3"></i>
                 <h3 class="fs-4 m-0 mx-2">Games</h3>
                 <p class="m-0 ad-sub">(All genre. Platform: Computer)</p>
             </div>
             <i class="bi bi-caret-left d-none d-md-grid"></i>
-                <div class="bg-light-grey row g-3 mx-3">
-                    <div class="bg-light col-6 border border-1">
-                        <div class="mx-1">
-                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
-                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
-                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        </div>
-                    </div>
-                    <div class="bg-light col-6 border border-1 ">
-                        <div class="mx-1">
-                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
-                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
-                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        </div>
-                    </div>
-                    <div class="bg-light col-6 border border-1 ">
-                        <div class="mx-1">
-                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
-                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
-                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        </div>
-                    </div>
-                    <div class="bg-light col-6 border border-1 ">
-                        <div class="mx-1">
-                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
-                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
-                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        </div>
-                    </div>
-                    <div class="bg-light col-6 border border-1 ">
-                        <div class="mx-1">
-                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
-                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
-                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        </div>
-                    </div>
-                    <div class="bg-light col-6 border border-1 ">
-                        <div class="mx-1">
-                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
-                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
-                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        </div>
-                    </div>
-                    <div class="bg-light col-6 border border-1 ">
-                        <div class="mx-1">
-                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
-                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
-                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        </div>
-                    </div>
-                    <div class="bg-light col-6 border border-1 ">
-                        <div class="mx-1">
-                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
-                            <p class="ad-p-1 lh-1 color-black font-2">Sony Xperia An online and local party game of teamwork and betrayal for 4-10 players...in space</p>
-                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+            <div class="bg-light-grey row g-3 mx-3">
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Among Us</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">20$</p>
                         </div>
                     </div>
                 </div>
+                <div class="bg-light col-6 border border-1 ">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/bloons.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">20$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1 ">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/dyinglight.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Dying Light</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">27$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1 ">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/flightsimulator.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Flight Simulator</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">89$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1 ">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/gta.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Grand Theft Auto V</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">60$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1 ">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/hades.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Hades</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">15$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1 ">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/loophero.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Loop Hero</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">15$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1 ">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/monsterhunter.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Monster Hunter World</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">40$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1 ">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/stardewvalley.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Stardew Valley</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">15$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <div>
+                            <img class="img-fluid mt-3" src="Assets/imgs/terraria.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Terraria</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">10$</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <i class="bi bi-caret-right d-none d-md-grid"></i>
+        </div>
+        <!-- Second Ad List -->
+        <div class="mt-2 bg-light-grey row g-3 mx-3">
+            <div class="bg-light d-flex justify-content-start align-items-center border-bottom border-2">
+                <i class="bi bi-controller color-black fs-2 ms-3"></i>
+                <h3 class="fs-4 m-0 mx-2">Consoles</h3>
+                <p class="m-0 ad-sub">(Sony & Microsoft)</p>
+            </div>
+            <i class="bi bi-caret-left d-none d-md-grid"></i>
+            <div class="bg-light col-6 border border-1">
+                <div class="mx-1">
+                    <img class="img-fluid mt-3" src="Assets/imgs/ps4.jpg" alt="">
+                    <p class="ad-p-1 lh-1 color-black font-2 my-1">PlayStation 4 Console - 1TB Slim Edition</p>
+                    <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                    <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4"></i>
+                        <p class="fs-4 m-0 color-red">368$</p>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-light col-6 border border-1">
+                <div class="mx-1">
+                    <img class="mt-3 img-fluid ps5-img" src="Assets/imgs/ps5.jpg" alt="">
+                    <p class="ad-p-1 lh-1 color-black font-2 my-1">PlayStation 5 Console</p>
+                    <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                    <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4"></i>
+                        <p class="fs-4 m-0 color-red">1500$</p>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-light col-6 border border-1">
+                <div class="mx-1">
+                    <img class="img-fluid mt-3" src="Assets/imgs/xbox.jpg" alt="">
+                    <p class="ad-p-1 lh-1 color-black font-2 my-1">Xbox One S 1TB Console</p>
+                    <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                    <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4"></i>
+                        <p class="fs-4 m-0 color-red">370$</p>
+                    </div>
+                </div>
+            </div>
+            <div class="bg-light col-6 border border-1">
+                <div class="mx-1">
+                    <img class="img-fluid mt-3" src="Assets/imgs/xboxs.jpg" alt="">
+                    <p class="ad-p-1 lh-1 color-black font-2 my-1">Xbox Series S - 512GB SSD</p>
+                    <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                    <div class="d-flex justify-content-between align-items-end">
+                        <i class="bi bi-plus-square color-grey fs-4"></i>
+                        <p class="fs-4 m-0 color-red">499$</p>
+                    </div>
+                </div>
+            </div>
             <i class="bi bi-caret-right d-none d-md-grid"></i>
         </div>
     </main>
+    <!-- Footer -->
     <footer>
-
+        <nav class="row">
+            <div class="d-md-flex flex-column col-md mx-2">
+                <div class="d-flex align-items-end justify-content-center">
+                    <i class="bi bi-box-seam color-grey fs-1"></i>
+                    <h2 class="color-grey fs-4">FICTIONAL</h2>
+                </div>
+                <div>
+                    <p class="d-none d-md-grid">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium eius quis nisi officiis laboriosam excepturi vero laborum dolorum dolorem asperiores.</p>
+                </div>
+            </div>
+            <div class="d-none d-md-grid col-md mx-2">
+                <h3 class="color-red footer-title">Categories</h3>
+                <div class="row">
+                    <div class="d-flex flex-column col">
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                    </div>
+                    <div class="d-flex flex-column col">
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                    </div>
+                    <div class="d-flex flex-column col">
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                        <a class="color-grey text-decoration-none" href="#">Lorem</a>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="d-md-flex">
+            <p class="color-grey text-center">
+                Copyright © Fictional.com.
+            </p>
+            <p class="color-grey text-center mx-1">
+                All Rights Reserved.
+            </p>
+            <p class="color-grey text-center">
+                Designed by João Vítor Montanholi
+            </p>
+        </div>
     </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
