--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <header>
         <nav class="nav">
             <div class="nav-1">
-                <i class="bi bi-box-seam color-red"></i>
-                <h2 class="text-light">FICTIONAL</h2>
+                <i class="bi bi-box-seam color-red me-1"></i>
+                <h2 class="text-light font-1 mt-2">FICTIONAL</h2>
             </div>
             <div class="nav-2">
                 <div >
@@ -174,54 +174,134 @@
             <i class="bi bi-caret-right d-none d-md-grid"></i>
         </div>
         <!-- Second Ad List -->
-        <div class="mt-2 bg-light-grey row g-3 mx-3">
+        <div class="my-3">
             <div class="bg-light d-flex justify-content-start align-items-center border-bottom border-2">
                 <i class="bi bi-controller color-black fs-2 ms-3"></i>
                 <h3 class="fs-4 m-0 mx-2">Consoles</h3>
                 <p class="m-0 ad-sub">(Sony & Microsoft)</p>
             </div>
             <i class="bi bi-caret-left d-none d-md-grid"></i>
-            <div class="bg-light col-6 border border-1">
-                <div class="mx-1">
-                    <img class="img-fluid mt-3" src="Assets/imgs/ps4.jpg" alt="">
-                    <p class="ad-p-1 lh-1 color-black font-2 my-1">PlayStation 4 Console - 1TB Slim Edition</p>
-                    <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
-                    <div class="d-flex justify-content-between align-items-end">
-                        <i class="bi bi-plus-square color-grey fs-4"></i>
-                        <p class="fs-4 m-0 color-red">368$</p>
+            <div class="mt-2 bg-light-grey row g-3 mx-3">
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/ps4.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">PlayStation 4 Console - 1TB Slim Edition</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">368$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="mt-3 img-fluid ps5-img" src="Assets/imgs/ps5.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">PlayStation 5 Console</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">1500$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/xbox.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Xbox One S 1TB Console</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">370$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/xboxs.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Xbox Series S - 512GB SSD</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">499$</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="bg-light col-6 border border-1">
-                <div class="mx-1">
-                    <img class="mt-3 img-fluid ps5-img" src="Assets/imgs/ps5.jpg" alt="">
-                    <p class="ad-p-1 lh-1 color-black font-2 my-1">PlayStation 5 Console</p>
-                    <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                    <div class="d-flex justify-content-between align-items-end">
-                        <i class="bi bi-plus-square color-grey fs-4"></i>
-                        <p class="fs-4 m-0 color-red">1500$</p>
+            <i class="bi bi-caret-right d-none d-md-grid"></i>
+        </div>
+        <!-- Third Ads List -->
+        <div class="my-3">
+            <div class="bg-light d-flex justify-content-start align-items-center border-bottom border-2">
+                <i class="bi bi-controller color-black fs-2 ms-3"></i>
+                <h3 class="fs-4 m-0 mx-2">Acessories</h3>
+                <p class="m-0 ad-sub">(Headsets, Controls, Keyboards, etc.)</p>
+            </div>
+            <i class="bi bi-caret-left d-none d-md-grid"></i>
+            <div class="mt-2 bg-light-grey row g-3 mx-3">
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/mouse1.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Redragon M711 Cobra RGB Wired Gaming Mouse</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">19$</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="bg-light col-6 border border-1">
-                <div class="mx-1">
-                    <img class="img-fluid mt-3" src="Assets/imgs/xbox.jpg" alt="">
-                    <p class="ad-p-1 lh-1 color-black font-2 my-1">Xbox One S 1TB Console</p>
-                    <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                    <div class="d-flex justify-content-between align-items-end">
-                        <i class="bi bi-plus-square color-grey fs-4"></i>
-                        <p class="fs-4 m-0 color-red">370$</p>
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="mt-3 img-fluid ps5-img" src="Assets/imgs/mouse2.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Razer DeathAdder Elite Gaming Mouse</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">63$</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="bg-light col-6 border border-1">
-                <div class="mx-1">
-                    <img class="img-fluid mt-3" src="Assets/imgs/xboxs.jpg" alt="">
-                    <p class="ad-p-1 lh-1 color-black font-2 my-1">Xbox Series S - 512GB SSD</p>
-                    <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                    <div class="d-flex justify-content-between align-items-end">
-                        <i class="bi bi-plus-square color-grey fs-4"></i>
-                        <p class="fs-4 m-0 color-red">499$</p>
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/headset1.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">HyperX Cloud II - Gaming Headset</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">99$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/headset2.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Turtle Beach Stealth 600 Gen 2 Wireless Gaming Headset for PlayStation 5</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">499$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/key1.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Corsair K55 RGB Gaming Keyboard</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">499$</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light col-6 border border-1">
+                    <div class="mx-1">
+                        <img class="img-fluid mt-3" src="Assets/imgs/key2.jpg" alt="">
+                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Logitech G613 LIGHTSPEED Wireless Mechanical Gaming Keyboard</p>
+                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Amazon</span></p>
+                        <div class="d-flex justify-content-between align-items-end">
+                            <i class="bi bi-plus-square color-grey fs-4"></i>
+                            <p class="fs-4 m-0 color-red">499$</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -234,7 +314,7 @@
             <div class="d-md-flex flex-column col-md mx-2">
                 <div class="d-flex align-items-end justify-content-center">
                     <i class="bi bi-box-seam color-grey fs-1"></i>
-                    <h2 class="color-grey fs-4">FICTIONAL</h2>
+                    <h2 class="color-grey fs-4 font-1">FICTIONAL</h2>
                 </div>
                 <div>
                     <p class="d-none d-md-grid">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium eius quis nisi officiis laboriosam excepturi vero laborum dolorum dolorem asperiores.</p>
