Finish ads list 1 for all viewports

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="#" class="color-grey text-decoration-none">Purchase List</a>
                 </div>
             </div>
-            <div class="nav-3 d-none">
+            <div class="nav-3 d-none d-md-flex">
                 <a href="#" class="fs-6 color-grey text-decoration-none badge bg-red text-light rounded-1">POST AN AD</a>
             </div>
         </nav>
@@ -56,122 +56,124 @@
                 <h3 class="fs-4 m-0 mx-2">Games</h3>
                 <p class="m-0 ad-sub">(All genre. Platform: Computer)</p>
             </div>
-            <i class="bi bi-caret-left d-none d-md-grid"></i>
-            <div class="bg-light-grey row g-3 mx-3">
-                <div class="bg-light col-6 border border-1">
-                    <div class="mx-1">
-                        <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
-                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Among Us</p>
-                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
-                            <p class="fs-4 m-0 color-red">20$</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light col-6 border border-1 ">
-                    <div class="mx-1">
-                        <img class="img-fluid mt-3" src="Assets/imgs/bloons.jpg" alt="">
-                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
-                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
-                            <p class="fs-4 m-0 color-red">20$</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light col-6 border border-1 ">
-                    <div class="mx-1">
-                        <img class="img-fluid mt-3" src="Assets/imgs/dyinglight.jpg" alt="">
-                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Dying Light</p>
-                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
-                            <p class="fs-4 m-0 color-red">27$</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light col-6 border border-1 ">
-                    <div class="mx-1">
-                        <img class="img-fluid mt-3" src="Assets/imgs/flightsimulator.jpg" alt="">
-                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Flight Simulator</p>
-                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
-                            <p class="fs-4 m-0 color-red">89$</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light col-6 border border-1 ">
-                    <div class="mx-1">
-                        <img class="img-fluid mt-3" src="Assets/imgs/gta.jpg" alt="">
-                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Grand Theft Auto V</p>
-                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
-                            <p class="fs-4 m-0 color-red">60$</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light col-6 border border-1 ">
-                    <div class="mx-1">
-                        <img class="img-fluid mt-3" src="Assets/imgs/hades.jpg" alt="">
-                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Hades</p>
-                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
-                            <p class="fs-4 m-0 color-red">15$</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light col-6 border border-1 ">
-                    <div class="mx-1">
-                        <img class="img-fluid mt-3" src="Assets/imgs/loophero.jpg" alt="">
-                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Loop Hero</p>
-                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
-                            <p class="fs-4 m-0 color-red">15$</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light col-6 border border-1 ">
-                    <div class="mx-1">
-                        <img class="img-fluid mt-3" src="Assets/imgs/monsterhunter.jpg" alt="">
-                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Monster Hunter World</p>
-                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
-                            <p class="fs-4 m-0 color-red">40$</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light col-6 border border-1 ">
-                    <div class="mx-1">
-                        <img class="img-fluid mt-3" src="Assets/imgs/stardewvalley.jpg" alt="">
-                        <p class="ad-p-1 lh-1 color-black font-2 my-1">Stardew Valley</p>
-                        <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
-                            <p class="fs-4 m-0 color-red">15$</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="bg-light col-6 border border-1">
-                    <div class="mx-1">
-                        <div>
-                            <img class="img-fluid mt-3" src="Assets/imgs/terraria.jpg" alt="">
-                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Terraria</p>
+            <div class="d-md-flex">
+                <i class="bi bi-caret-left d-none d-md-grid fs-1 align-self-center"></i>
+                <div class="bg-light-grey row g-3 mx-3">
+                    <div class="bg-light col-6 col-md-4 col-lg-3 border border-1">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/amongus.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Among Us</p>
                             <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                            <div class="d-flex justify-content-between align-items-end">
+                                <i class="bi bi-plus-square color-grey fs-4"></i>
+                                <p class="fs-4 m-0 color-red">20$</p>
+                            </div>
                         </div>
-                        <div class="d-flex justify-content-between align-items-end">
-                            <i class="bi bi-plus-square color-grey fs-4"></i>
-                            <p class="fs-4 m-0 color-red">10$</p>
+                    </div>
+                    <div class="bg-light col-6 col-md-4 col-lg-3 border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/bloons.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <i class="bi bi-plus-square color-grey fs-4"></i>
+                                <p class="fs-4 m-0 color-red">20$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 col-md-4 col-lg-3 border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/dyinglight.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Dying Light</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <i class="bi bi-plus-square color-grey fs-4"></i>
+                                <p class="fs-4 m-0 color-red">27$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 col-lg-3 d-md-none d-lg-grid border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/flightsimulator.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Flight Simulator</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <i class="bi bi-plus-square color-grey fs-4"></i>
+                                <p class="fs-4 m-0 color-red">89$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 d-md-none border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/gta.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Grand Theft Auto V</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <i class="bi bi-plus-square color-grey fs-4"></i>
+                                <p class="fs-4 m-0 color-red">60$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 d-md-none border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/hades.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Hades</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <i class="bi bi-plus-square color-grey fs-4"></i>
+                                <p class="fs-4 m-0 color-red">15$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 d-md-none border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/loophero.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Loop Hero</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <i class="bi bi-plus-square color-grey fs-4"></i>
+                                <p class="fs-4 m-0 color-red">15$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 d-md-none border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/monsterhunter.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Monster Hunter World</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <i class="bi bi-plus-square color-grey fs-4"></i>
+                                <p class="fs-4 m-0 color-red">40$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 d-md-none border border-1 ">
+                        <div class="mx-1">
+                            <img class="img-fluid mt-3" src="Assets/imgs/stardewvalley.jpg" alt="">
+                            <p class="ad-p-1 lh-1 color-black font-2 my-1">Stardew Valley</p>
+                            <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <i class="bi bi-plus-square color-grey fs-4"></i>
+                                <p class="fs-4 m-0 color-red">15$</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bg-light col-6 d-md-none border border-1">
+                        <div class="mx-1">
+                            <div>
+                                <img class="img-fluid mt-3" src="Assets/imgs/terraria.jpg" alt="">
+                                <p class="ad-p-1 lh-1 color-black font-2 my-1">Terraria</p>
+                                <p class="color-grey ad-p-2 lh-1 font-2">From: <span class="color-black">Steam</span></p>
+                            </div>
+                            <div class="d-flex justify-content-between align-items-end">
+                                <i class="bi bi-plus-square color-grey fs-4"></i>
+                                <p class="fs-4 m-0 color-red">10$</p>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <i class="bi bi-caret-right d-none d-md-grid fs-1 align-self-center"></i>
             </div>
-            <i class="bi bi-caret-right d-none d-md-grid"></i>
         </div>
         <!-- Second Ad List -->
         <div class="my-3">
