Change acessories ads icon

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <!-- Third Ads List -->
         <div class="my-3">
             <div class="bg-light d-flex justify-content-start align-items-center border-bottom border-2">
-                <i class="bi bi-controller color-black fs-2 ms-3"></i>
+                <i class="bi bi-headset color-black fs-2 ms-3"></i>
                 <h3 class="fs-4 m-0 mx-2">Acessories</h3>
                 <p class="m-0 ad-sub">(Headsets, Controls, Keyboards, etc.)</p>
             </div>
