--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bg-light col-6 col-md-4 col-lg-3 border border-1">
+                    <div class="bg-light col-6 col-md-4 col-lg-3 d-md-none d-lg-grid border border-1">
                         <div class="mx-1">
                             <img class="img-fluid mt-3" src="Assets/imgs/headset2.jpg" alt="">
                             <p class="ad-p-1 lh-1 color-black font-2 my-1">Turtle Beach Stealth 600 Gen 2 Wireless Gaming Headset for PlayStation 5</p>
