Add social medias icons on footer

--- a/index.html
+++ b/index.html
@@ -324,16 +324,25 @@
                 </div>
             </div>
         </nav>
-        <div class="d-md-flex mt-2 justify-content-center">
-            <p class="color-grey text-center">
-                Copyright © Fictional.com.
-            </p>
-            <p class="color-grey text-center mx-1">
-                All Rights Reserved.
-            </p>
-            <p class="color-grey text-center">
-                Designed by João Vítor Montanholi
-            </p>
+        <div class="d-flex footer-2">
+            <div class="d-md-flex mt-2 ms-2">
+                <p class="color-grey text-center">
+                    Copyright © Fictional.com.
+                </p>
+                <p class="color-grey text-center mx-1">
+                    All Rights Reserved.
+                </p>
+                <p class="color-grey text-center">
+                    Designed by João Vítor Montanholi
+                </p>
+            </div>
+            <div class="d-none d-md-flex color-grey fs-4">
+                <i class="bi bi-facebook m-1"></i>
+                <i class="bi bi-twitter m-1"></i>
+                <i class="bi bi-twitch m-1"></i>
+                <i class="bi bi-camera-fill m-1"></i>
+                <i class="bi bi-linkedin m-1 me-3"></i>
+            </div>
         </div>
     </footer>
 
