Add more text to footer web description

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                     <h2 class="color-grey fs-4 font-1">FICTIONAL</h2>
                 </div>
                 <div>
-                    <p class="d-none d-md-grid">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium eius quis nisi officiis laboriosam excepturi vero laborum dolorum dolorem asperiores.</p>
+                    <p class="d-none d-md-grid">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat expedita rem provident at, minima ducimus numquam nulla doloribus incidunt perspiciatis maiores tempore accusamus ipsum omnis dolore. Reiciendis, ipsa dolorum consequatur dolore voluptatem similique laudantium ad!</p>
                 </div>
             </div>
             <div class="d-none d-lg-grid col-md">
