--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="nav-3 d-none d-md-flex">
-                <a href="#" class="fs-6 color-grey text-decoration-none badge bg-red text-light rounded-1">POST AN AD</a>
+                <a href="#" class="color-grey text-decoration-none badge bg-red text-light rounded-1">POST AN AD</a>
             </div>
         </nav>
         <!-- Ipad/Desktop searchbar -->
